--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,10 @@
-body .card {
+body .intro {
   display: flex;
   justify-content: center;
   float: left;
-  background-color: #fff;
   font-family: helvetica;
-  border: 1px solid;
-  width: 600px;
-  padding: 30px;
-  height: 300px;
+  
+
 }
 
 body .hover {
