--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 body {
   font-family: helvetica;
+  color: #fff;
 }
 
 .intro {
   display: flex;
-  align-content:flex-start; 
+  align-content:flex-start;
 }
