adding more css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 body {
   font-family: helvetica;
-  color: #fff;
+
 }
 
 .intro {
   display: flex;
   align-content:flex-start;
+  color: #ff0000;
 }
