--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ h1.card-title {
   font-size: 64px;
 }
 
+.card-text:hover {
+  cursor: pointer;
+}
 .card-body {
   background-color: #007BA7;
   border-radius: 25px;
@@ -69,6 +72,15 @@ p {
   background-color: #D3D3D3;
 
 }
+
+ #alert {
+  border-radius: 10px;
+  padding: 5px;
+  background-color: #e2b6a5;
+
+}
+
+
 
 a img {
   width: 10%;
